# via

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yaml
codegen/: Cargo.toml
codegen/src/: attr.rs  helpers.rs  lib.rs  params.rs  parse.rs  path.rs  paths.rs  route.rs  scope.rs  util.rs  verb.rs
codegen/src/attribute/: mod.rs  path.rs  util.rs  verb.rs
codegen/src/parser/: http.rs  mod.rs  path.rs  verb.rs
contrib/via-cors/: Cargo.toml
contrib/via-fs/: Cargo.toml
contrib/via-graphql/: Cargo.toml
crates/via-auth/: Cargo.toml
crates/via-auth/src/: basic.rs  lib.rs  login.rs
crates/via-core/: Cargo.toml
crates/via-core/src/: error.rs  lib.rs  prelude.rs  router.rs  service.rs
crates/via-core/src/middleware/: context.rs  filter.rs  handler.rs  mod.rs
crates/via-core/src/middleware/context/: cookies.rs  mod.rs
crates/via-core/src/response/: format.rs  mod.rs
crates/via-core/src/routing/: mod.rs
crates/via-error/: Cargo.toml
crates/via-error/src/: lib.rs  macros.rs  respond.rs
crates/via-router/: Cargo.toml
crates/via-router/benches/: bench.rs
crates/via-router/src/: cache.rs  iter.rs  lib.rs  node.rs  path.rs  router.rs  routes.rs  search.rs  stack_vec.rs  verb.rs  visitor.rs
crates/via-router/src/path/: mod.rs  pattern.rs  span.rs  split_path.rs
crates/via-serve-static/: Cargo.toml  LICENSE
crates/via-serve-static/src/: etag.rs  lib.rs  resolve.rs  respond.rs  static_file.rs  stream_file.rs
docs/: README.md
docs/examples/advanced-blog/: Cargo.toml  README.md
docs/examples/advanced-blog/migrations/2020-03-23-143010_create_users/: up.sql
docs/examples/advanced-blog/migrations/2020-03-23-143029_create_posts/: up.sql
docs/examples/advanced-blog/src/: main.rs
docs/examples/advanced-blog/src/api/: posts.rs  users.rs
docs/examples/advanced-blog/src/database/: mod.rs  schema.rs
docs/examples/advanced-blog/src/database/models/: post.rs  user.rs
docs/examples/advanced-blog/src/service/: mod.rs  posts.rs  users.rs
docs/examples/advanced-blog/src/services/: mod.rs
docs/examples/advanced-blog/src/services/api/: error.rs  mod.rs  posts.rs  users.rs
docs/examples/blog-api/: .env  Cargo.toml
docs/examples/blog-api/migrations/2020-03-23-143029_create_posts/: up.sql
docs/examples/blog-api/src/: main.rs
docs/examples/blog-api/src/api/: mod.rs  posts.rs  users.rs  util.rs
docs/examples/blog-api/src/database/: mod.rs
docs/examples/blog-api/src/database/models/: post.rs  user.rs
docs/examples/hello-world/: Cargo.toml  README.md
docs/examples/hello-world/public/: index.html
docs/examples/hello-world/src/: main.rs
docs/examples/json/: Cargo.toml
docs/examples/json/src/: main.rs  models.rs
docs/examples/json/src/models/: article.rs  mod.rs
docs/examples/json/src/services/: article.rs  articles.rs  mod.rs  user.rs
examples/advanced-routing/: Cargo.toml
examples/bench/: Cargo.toml
examples/blog-api/: Cargo.toml  README.md
examples/blog-api/src/: main.rs  util.rs
examples/blog-api/src/api/: mod.rs  posts.rs  users.rs  util.rs
examples/blog-api/src/database/: mod.rs  schema.rs
examples/blog-api/src/database/models/: post.rs  user.rs
examples/blog-api/src/routes/: posts.rs  users.rs
examples/chat/: Cargo.toml  example.env
examples/chat/migrations/00000000000000_diesel_initial_setup/: up.sql
examples/chat/migrations/2025-11-04-181606-0000_create_users/: up.sql
examples/chat/migrations/2025-11-04-181609-0000_create_channels/: up.sql
examples/chat/migrations/2025-11-04-181609-0000_create_threads/: up.sql
examples/chat/migrations/2025-11-04-181615-0000_create_conversations/: down.sql  up.sql
examples/chat/migrations/2025-11-04-181615-0000_create_messages/: down.sql  up.sql
examples/chat/migrations/2025-11-04-181617-0000_create_reactions/: down.sql  up.sql
examples/chat/migrations/2025-11-11-150422-0000_create_subscriptions/: down.sql  up.sql
examples/chat/migrations/2025-11-16-160856-0000_create_before_keyset_fn/: down.sql  up.sql
examples/chat/src/: chat.rs  main.rs  models.rs  room.rs  schema.rs
examples/chat/src/database/: mod.rs  schema.rs
examples/chat/src/database/query/: conversation.rs  mod.rs
examples/chat/src/models/: channel.rs  conversation.rs  message.rs  mod.rs  reaction.rs  subscription.rs  thread.rs  user.rs
examples/chat/src/routes/: auth.rs  channels.rs  chat.rs  events.rs  messages.rs  mod.rs  reactions.rs  subscribe.rs  subscriptions.rs  threads.rs  users.rs
examples/chat/src/routes/channel/: authorization.rs  mod.rs  reactions.rs  subscriptions.rs  threads.rs
examples/chat/src/routes/thread/: authorization.rs  messages.rs  mod.rs  reactions.rs  subscriptions.rs
examples/chat/src/routes/threads/: authorization.rs  messages.rs  mod.rs  reactions.rs  subscriptions.rs
examples/chat/src/util/: auth.rs  debug_sql.rs  emoji.rs  error.rs  id.rs  mod.rs  paginate.rs  sql.rs
examples/chat/src/util/session/: identity.rs  mod.rs
examples/chat/src/util/sql/: id.rs  mod.rs  types.rs
examples/cookies/: Cargo.toml  README.md  example.env  gen-secret.sh
examples/cookies/src/: main.rs
examples/echo/: Cargo.toml
examples/echo-server/: Cargo.toml
examples/file-server/: Cargo.toml
examples/file-server/public/: about.html  index.html  style.css
examples/file-server/src/: main.rs
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
examples/json/: Cargo.toml
examples/json/src/: article.rs  main.rs  services.rs  store.rs
examples/json/src/services/: articles.rs
src/: allow.rs  app.rs  context.rs  cookies.rs  error.rs  event.rs  failure.rs  guard.rs  handler.rs  lib.rs  middleware.rs  next.rs  payload.rs  pipe.rs  prelude.rs  resources.rs  respond.rs  rest.rs  router.rs  routing.rs  runtime.rs  server.rs  service.rs  state.rs  timeout.rs  util.rs  websocket.rs  ws.rs
via-macros/: Cargo.toml
via-router/: Cargo.toml  LICENSE-APACHE
via-router/benches/: bench.rs
via-router/src/: binding.rs  cache.rs  error.rs  lib.rs  path.rs  router.rs  tree.rs
(+235 files in other folders)
