[package]
name = "via"
version = "2.0.0-rc.29"
authors = ["Zachary Golba <zachary.golba@postlight.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An async multi-threaded web framework for people who appreciate simplicity."
categories = ["web-programming::http-server"]
homepage = "https://github.com/zacharygolba/via"
repository = "https://github.com/zacharygolba/via"

[features]
default = ["http1"]

fs = ["dep:httpdate", "tokio/fs"]

http1 = ["hyper/http1"]
http2 = ["hyper/http2"]

rustls = ["dep:tokio-rustls"]

[dependencies]
bytes = "1"
futures-core = { version = "0.3", default-features = false }
http = "1"
http-body = "1"
http-body-util = "0.1"
httpdate = { version = "1", optional = true }
hyper = { version = "1", features = ["server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
percent-encoding = "2"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
via-router = { path = "./via-router" }

[dependencies.cookie]
version = "0.18"
features = ["percent-encode"]

[dependencies.tokio-rustls]
version = "0.26"
optional = true
default-features = false

[package.metadata.docs.rs]
all-features = true

[workspace]
members = ["via-router", "examples/*"]
