[package]
name = "via"
version = "2.0.0-rc.47"
authors = ["Zachary Golba <zachary.golba@postlight.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "An async multi-threaded web framework for people who appreciate simplicity."
categories = ["web-programming::http-server"]
homepage = "https://github.com/zacharygolba/via"
repository = "https://github.com/zacharygolba/via"

[features]
default = ["http1"]

aws-lc-rs = ["dep:aws-lc-rs", "tokio-rustls/aws-lc-rs", "tokio-websockets/aws_lc_rs"]

file = ["dep:httpdate", "tokio/fs"]

http1 = ["hyper/http1"]
http2 = ["hyper/http2"]

ring = ["dep:ring", "tokio-rustls/ring", "tokio-websockets/ring"]

rustls = ["dep:tokio-rustls"]

ws = [
    "dep:base64",
    "dep:bytestring",
    "dep:futures-sink",
    "dep:futures-util",
    "dep:tokio-websockets",
]

[dependencies]
bytes = "1"
futures-core = "0.3"
http = "1"
http-body = "1"
http-body-util = "0.1"
httpdate = { version = "1", optional = true }
hyper = { version = "1", features = ["server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
percent-encoding = "2"
serde = { version = "1", features = ["derive"]  }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
via-router = { version = "3.0.0-beta.28" }

[dependencies.aws-lc-rs]
version = "1"
optional = true

[dependencies.base64]
version = "0.22"
optional = true

[dependencies.bytestring]
version = "1"
optional = true

[dependencies.cookie]
version = "0.18"
features = ["percent-encode"]

[dependencies.futures-sink]
version = "0.3"
optional = true

[dependencies.futures-util]
version = "0.3"
features = ["sink"]
optional = true

[dependencies.ring]
version = "0.17"
optional = true

[dependencies.tokio-rustls]
version = "0.26"
optional = true
default-features = false

[dependencies.tokio-websockets]
version = "0.12"
features = ["aws_lc_rs", "server"]
optional = true

[package.metadata.docs.rs]
features = ["file", "ws"]

[workspace]
members = ["via-router", "examples/*"]
