[package]
name = "via"
version = "2.0.0-gm.9"
authors = ["Zachary Golba <zachary.golba@postlight.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "An async multi-threaded web framework for people who appreciate simplicity."
categories = ["web-programming::http-server"]
homepage = "https://github.com/zacharygolba/via"
repository = "https://github.com/zacharygolba/via"

[features]
default = ["http1"]

aws-lc-rs = ["dep:aws-lc-rs", "tokio-rustls/aws-lc-rs", "tokio-websockets/aws_lc_rs"]

file = ["dep:httpdate", "tokio/fs"]

http1 = ["hyper/http1"]
http2 = ["hyper/http2"]

native-tls = ["dep:native-tls", "dep:tokio-native-tls"]

ring = ["dep:ring", "tokio-rustls/ring", "tokio-websockets/ring"]

rustls = ["dep:rustls", "dep:tokio-rustls"]

ws = [
    "dep:base64",
    "dep:bytestring",
    "dep:futures-sink",
    "dep:futures-util",
    "dep:tokio-websockets",
]

[dependencies]
bitflags = "2"
bytes = "1"
bytestring = { version = "1", optional = true }
cookie = { version = "0.18", features = ["percent-encode"] }
delegate = "0.13"
futures-core = "0.3"
http = "1"
http-body = "1"
http-body-util = "0.1"
httpdate = { version = "1", optional = true }
hyper = { version = "1", features = ["server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
percent-encoding = "2"
serde = { version = "1", features = ["derive"]  }
serde_json = "1"
smallvec = { version = "1", features = ["serde"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7", default-features = false }
via-router = { version = "3.0.0-beta.32" }
zeroize = "1.8.2"

[dependencies.aws-lc-rs]
version = "1"
optional = true

[dependencies.base64]
version = "0.22"
optional = true

[dependencies.futures-sink]
version = "0.3"
optional = true

[dependencies.futures-util]
version = "0.3"
features = ["sink"]
optional = true

[dependencies.native-tls]
version = "0.2"
features = ["alpn"]
optional = true

[dependencies.tokio-native-tls]
version = "0.3"
optional = true

[dependencies.ring]
version = "0.17"
optional = true

[dependencies.rustls]
version = "0.23"
features = ["std"]
optional = true
default-features = false

[dependencies.tokio-rustls]
version = "0.26"
optional = true
default-features = false

[dependencies.tokio-websockets]
version = "0.12"
features = ["aws_lc_rs", "server"]
optional = true

[dev-dependencies]
bb8 = "0.9"
diesel = { features = ["chrono", "uuid"], version = "2" }
diesel-async = { version = "0.7", features = ["bb8", "postgres"] }
cookie = { version = "0.18", features = ["percent-encode", "private"] }
time = { version = "0.3" }
uuid = { version = "1", features = ["v4", "serde"] }

[package.metadata.docs.rs]
features = ["file", "native-tls", "rustls", "ws"]

[workspace]
members = ["via-router", "examples/*"]
