[package]
name = "via-codegen"
version = "0.1.0"
authors = ["Zachary Golba <zachary.golba@postlight.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
lazy_static = "1.4.0"
nom = "5.1.1"
proc-macro2 = "1.0.6"
quote = "1.0.2"
syn = "1.0.14"
