[package]
name = "via-codegen"
version = "0.1.0"
authors = ["Zachary Golba <zachary.golba@postlight.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
nom = { features = ["regexp"], version = "5.1.1" }
proc-macro2 = "1.0.6"
quote = "1.0.2"
syn = { features = ["extra-traits", "full"], version = "1.0.16" }
regex = "1.3.4"
lazy_static = "1.4.0"
termcolor = "1.1.0"
ansi_term = "0.12.1"
