[package]
name = "via-codegen"
version = "0.1.0"
authors = ["Zachary Golba <zachary.golba@postlight.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
nom = "7.1.3"
proc-macro2 = "1.0.84"
quote = "1.0.36"
syn = { features = ["extra-traits", "full"], version = "2.0.65" }
