[package]
name = "via-auth"
version = "0.1.0"
authors = ["Zachary Golba <zachary.golba@postlight.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
core = { package = "via-core", path = "../via-core" }
error = { package = "via-error", path = "../via-error" }
futures = "0.3.30"
http = "1.1.0"
