[package]
name = "via-core"
version = "0.1.0"
authors = ["Zachary Golba <zachary.golba@postlight.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.4"
error = { package = "via-error", path = "../via-error" }
futures = "0.3.4"
http = "0.2.0"
hyper = { default-features = false, features = ["stream", "tcp"], version = "0.13.2" }
indexmap = "1.3.2"
smallvec = "1.2.0"
serde = "1.0.104"
serde_json = "1.0.48"

[dependencies.radr]
git = "https://github.com/zacharygolba/radr"

[dependencies.verbs]
git = "https://github.com/zacharygolba/verbs"
