[package]
name = "via-core"
version = "0.1.0"
authors = ["Zachary Golba <zachary.golba@postlight.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
cookie = { features = ["secure", "percent-encode"], version = "0.18.1" }
futures = "0.3.30"
http = "1.1.0"
http-body-util = "0.1.1"
hyper = "1.3.1"
indexmap = "2.2.6"
smallvec = "1.13.2"
serde = "1.0.202"
serde_json = "1.0.117"

[dependencies.router]
package = "via-router"
path = "../via-router"
