[package]
name = "via-error"
version = "0.1.0"
authors = ["Zachary Golba <zachary.golba@postlight.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.4"
http = "0.2.0"
serde = "1.0.104"
serde_json = "1.0.48"
