[package]
name = "via-router"
version = "3.0.0-beta.4"
authors = ["Zachary Golba <zachary.golba@postlight.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A fast and flexible http router."
homepage = "https://github.com/zacharygolba/via"
repository = "https://github.com/zacharygolba/via"
