[package]
name = "via-serve-static"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = []
etag-md5 = ["dep:md-5"]
etag-sha1 = ["dep:sha1"]
etag-sha256 = ["dep:sha2"]

[dependencies]
bitflags = "2.6"
futures-util = { version = "0.3", default-features = false }
httpdate = "1.0"
md-5 = { version = "0.10", optional = true }
mime_guess = "2.0"
sha1 = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }
tokio = "1"

[dependencies.via]
path = "../.."
