[package]
name = "chat"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1"
cookie = { version = "0.18", features = ["signed", "private"] }
dotenvy = "0.15"
http = "1"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "serde"] }
via = { path = "../..", features = ["aws-lc-rs", "ws"] }

[dependencies.bytestring]
features = ["serde"]
version = "1"
