[package]
name = "chat"
version = "0.1.0"
edition = "2024"

[dependencies]
bb8 = "0.9"
base64 = "0.22"
bitflags = { version = "2", features = ["serde"] }
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
cookie = { version = "0.18", features = ["signed", "private"] }
diesel = { features = ["chrono", "uuid"], version = "2" }
diesel-async = { version = "0.7", features = ["bb8", "postgres"] }
dotenvy = "0.15"
http = "1"
serde = "1"
serde_json = "1"
time = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "serde"] }
via = { path = "../..", features = ["aws-lc-rs", "ws"] }

[dependencies.bytestring]
features = ["serde"]
version = "1"
