[package]
name = "chat"
version = "0.1.0"
edition = "2024"

[dependencies]
http = "1"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
via = { path = "../..", features = ["aws-lc-rs", "ws"] }

[dependencies.bytestring]
features = ["serde"]
version = "1"