[package]
name = "cookies"
version = "0.1.0"
authors = ["Zachary Golba <zachary.golba@postlight.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cookie = { version = "0.18", features = ["percent-encode", "private"] }
dotenvy = "0.15.7"
time = "0.3.44"
via = { path = "../.." }

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]
