[package]
name = "hello-world"
version = "0.1.0"
authors = ["Zachary Golba <zachary.golba@postlight.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.11.1"
http-body-util = "0.1.3"
serde_json = "1.0.149"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
via = { path = "../.." }
