[package]
name = "json"
version = "0.1.0"
authors = ["Zachary Golba <zachary.golba@postlight.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0.48"
uuid = { features = ["serde", "v4"], version = "0.8.1" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serde]
features = ["derive"]
version = "1.0.104"

[dependencies.tokio]
features = ["full"]
version = "0.2.11"

[dependencies.via]
path = "../.."
