[package]
name = "advanced-blog"
version = "0.1.0"
authors = ["Zachary Golba <zachary.golba@postlight.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { features = ["serde"], version = "0.4.38" }
diesel = { features = ["chrono", "postgres", "r2d2"], version = "1.4.3" }
dotenv = "0.15.0"
serde = { features = ["derive"], version = "1.0.202" }
tokio = { features = ["full"], version = "1.37.0" }
via = { path = "../../.." }
lazy_static = "1.4.0"
tokio-diesel = "0.3.0"

[dev-dependencies]
diesel_migrations = { features = ["postgres"], version = "1.4.0" }
