[package]
name = "advanced-blog"
version = "0.1.0"
authors = ["Zachary Golba <zachary.golba@postlight.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { features = ["serde"], version = "0.4.38" }
diesel = { features = ["chrono"], version = "2.1.6" }
diesel-async = { version = "0.4.1", features = ["bb8", "postgres"] }
dotenvy = "0.15.7"
serde = { features = ["derive"], version = "1.0.202" }
serde_json = "1.0.117"
bb8 = "0.8.3"

[dependencies.tokio]
features = ["macros", "rt-multi-thread"]
version = "1.38.0"

[dependencies.via]
features = ["serde"]
path = "../../.."

[dev-dependencies]
diesel_migrations = { features = ["postgres"], version = "2.1.0" }
