[package]
name = "hello-world"
version = "0.1.0"
authors = ["Zachary Golba <zachary.golba@postlight.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
via = { path = "../../.." }
via-serve-static = { path = "../../../crates/via-serve-static" }
