[package]
name = "json"
version = "0.1.0"
authors = ["Zachary Golba <zachary.golba@postlight.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.104"
tokio = { features = ["full"], version = "0.2.11" }
uuid = { features = ["serde", "v4"], version = "0.8.1" }
via = { path = "../../.." }
